--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,49 @@
     -webkit-text-size-adjust: 100%;
 }
 
+#root {
+    @apply mx-auto my-0 h-full text-center;
+}
+
 body,
 html {
     height: 100%;
     margin: 0;
     overflow: auto;
+}
+
+h1 {
+    @apply text-3xl font-bold;
+}
+
+h3 {
+    @apply text-xl font-bold;
+}
+
+.bg-default-gradient {
+    @apply bg-gradient-to-br from-[#CDA5FF] to-[#F5EDFF];
+}
+
+input {
+    @apply w-full rounded-[10px] border border-[#C2C2C2] bg-white px-[15px] py-[8px] text-sm font-medium text-[#999999];
+}
+
+span.error-message {
+    @apply block px-2 text-left text-sm text-rose-500;
+}
+
+.button-default {
+    @apply rounded-[8px] p-3 font-medium;
+}
+
+.button-neutral-light {
+    @apply button-default bg-neutralLight text-[#272727] hover:bg-slate-300;
+}
+
+.button-neutral-dark {
+    @apply button-default bg-neutralDark text-white hover:bg-slate-600;
+}
+
+.button-primary {
+    @apply button-default bg-primary text-white hover:bg-primaryLight;
 }
