feat: added global css to tables

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     font-weight: 400;
 
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    /* background-color: #242424; */
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -51,12 +51,24 @@ textarea {
     @apply w-full rounded-[10px] border border-[#C2C2C2] bg-white px-[15px] py-[8px] text-sm font-medium  text-[#999999];
 }
 
+table {
+    @apply bg-dark-gradient mx-auto  border-collapse rounded-md text-alternative-text;
+}
+
+tbody {
+    @apply bg-white text-primary;
+}
+
 th {
     @apply px-6 py-3;
 }
 
 td {
     @apply border-2 border-primary px-6 py-3;
+}
+
+thead.multi-rows th {
+    @apply border border-secondary;
 }
 
 /** CUSTOM ELEMENTS **/
